--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.0",
     "prettier": "^2.4.1"
-  }
+  },
+  "homepage": "https://nihaneef.github.io/"
 }
